--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Curso de Javascript 1</h1>
+    <h1>Curso de Javascript ss1</h1>
 
     <script src="variables.js"></script>
 </body>
